--- a/Project/src/app/view/ShareTabLayout.fxml
+++ b/Project/src/app/view/ShareTabLayout.fxml
@@ -1,8 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.web.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+   <children>
+      <SplitPane dividerPositions="0.15" prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Label layoutX="4.0" layoutY="9.0" prefHeight="20.0" prefWidth="73.0" text="Label" />
+                  <CheckBox layoutX="3.0" layoutY="34.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox layoutX="3.0" layoutY="59.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox layoutX="3.0" layoutY="84.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox layoutX="3.0" layoutY="109.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox layoutX="3.0" layoutY="135.0" mnemonicParsing="false" text="CheckBox" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <ScrollPane fx:id="shareTabScrollPane" layoutX="153.0" layoutY="49.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
+</AnchorPane>
