--- a/Project/src/app/view/ShareTabLayout.fxml
+++ b/Project/src/app/view/ShareTabLayout.fxml
@@ -14,11 +14,11 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <Label layoutX="4.0" layoutY="9.0" prefHeight="20.0" prefWidth="73.0" text="Label" />
-                  <CheckBox layoutX="3.0" layoutY="34.0" mnemonicParsing="false" text="CheckBox" />
-                  <CheckBox layoutX="3.0" layoutY="59.0" mnemonicParsing="false" text="CheckBox" />
-                  <CheckBox layoutX="3.0" layoutY="84.0" mnemonicParsing="false" text="CheckBox" />
-                  <CheckBox layoutX="3.0" layoutY="109.0" mnemonicParsing="false" text="CheckBox" />
-                  <CheckBox layoutX="3.0" layoutY="135.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox fx:id="cb1" layoutX="3.0" layoutY="34.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox fx:id="cb2" layoutX="3.0" layoutY="59.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox fx:id="cb3" layoutX="3.0" layoutY="84.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox fx:id="cb4" layoutX="3.0" layoutY="109.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox fx:id="cb5" layoutX="3.0" layoutY="135.0" mnemonicParsing="false" text="CheckBox" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
