--- a/Project/src/app/view/ShareTabLayout.fxml
+++ b/Project/src/app/view/ShareTabLayout.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="app.controller.ShareTabController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.ShareTabController">
    <children>
       <SplitPane dividerPositions="0.15" prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -18,7 +17,9 @@
                   <CheckBox fx:id="cb2" layoutX="3.0" layoutY="59.0" mnemonicParsing="false" text="CheckBox" />
                   <CheckBox fx:id="cb3" layoutX="3.0" layoutY="84.0" mnemonicParsing="false" text="CheckBox" />
                   <CheckBox fx:id="cb4" layoutX="3.0" layoutY="109.0" mnemonicParsing="false" text="CheckBox" />
-                  <CheckBox fx:id="cb5" layoutX="3.0" layoutY="135.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox fx:id="cb5" layoutX="3.0" layoutY="134.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox fx:id="cb6" layoutX="3.0" layoutY="159.0" mnemonicParsing="false" text="CheckBox" />
+                  <CheckBox fx:id="cb7" layoutX="3.0" layoutY="182.0" mnemonicParsing="false" text="CheckBox" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
