--- a/Project/src/app/view/StatTabLayout.fxml
+++ b/Project/src/app/view/StatTabLayout.fxml
@@ -22,6 +22,7 @@
             
             <ComboBox fx:id="timeScaleBox" layoutX="588.0" layoutY="40.0" prefHeight="26.0" prefWidth="109.0" />
             <ComboBox fx:id="planNameBox" layoutX="704.0" layoutY="40.0" prefHeight="26.0" prefWidth="184.0" />
+            <CheckBox fx:id="public_box" layoutX="78.0" layoutY="44.0" mnemonicParsing="false" text="Public" />
             
          </children>
       </AnchorPane>
